Minor image updates, cancellation handling
Made the auth and print tags non-bold in 'good-ideas' so hopefully they won't overflow the logo now.

A newline wasn't being respected in 'copyright-timeline', so now those are separate text elements.

Handles Cancel in the prompt in the webpage.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
        
 	function clickHandler(name){
 		var printer = window.prompt("Insert printer name and address:", "");
+		if ((printer == null) || (printer == "null")){
+			return;
+		}
 		
 		window.open(dlsource + "?name=" + encodeURIComponent(name) + "&printer=" + encodeURIComponent(printer) + "&format=pdf")
 				
