DL page wording & "Nothing to Hide" art
- Expanded the explanation in `index.html` to clarify 'printer' means a legal entity, not the make and model of the one on your desktop.

- Modified the artwork in `nothing-to-hide`: space is made for the text by deleting the knees and lower rather than by clipping. This means the lines have rounded ends like in the rest of the artwork.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   </head>
   <body>
     <h1>Click on an image to add a printing tag and get a PDF!</h1>
-    <p>Under Australian electoral law, <a href="https://pirateparty.org.au/wiki/Authorisation_processes#Printed_materials.2C_videos_and_paid_Internet_advertisements">almost all printed political material</a> must identify the printer, as well as identifiying the authorising person. This page serves as a mechanism to keep authorisation tags current, and to easily insert printing tags.</p>
+    <p>Under Australian electoral law, <a href="https://pirateparty.org.au/wiki/Authorisation_processes#Printed_materials.2C_videos_and_paid_Internet_advertisements">almost all printed political material</a> must identify the printer, as well as identifiying the authorising person. This page serves as a mechanism to keep authorisation tags current, and to easily insert printing tags.</p> 
+    <p>To download a PDF with the printing tag, simply click on an image and insert the name and full address of the printer when prompted.</p>
+    <p>Example: <em>P. Sherman Printing, 42 Wallaby Way, Sydney NSW 2003</em></p>
+    <p>If you want image to share online, just save it as a PNG from this page - the correct authorisation tag is already in place!</p>
+    
 
     <div id="itemsGoHere"></div>
     <script>
