--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>PPAU-Graphics index</title>
+    <meta name="theme-color" content="#0073AE">
+    <meta name="Description" content="Pirate Poster Generator">
+    <title>Pirate Poster Generator | PPAU-Graphics</title>
     <style media="screen" type="text/css">
       body {font-family: "Open Sans", sans-serif;
-              width: 90vw; min-width: 600px; margin:auto;}
-      img {height : 400px; border: 1px solid #eee; border-radius: 4px}
+              width: 90vw; /*min-width:*/ 600px; margin:auto;}
+      img {height : 400px; border: 1px solid #eee; border-radius: 1vw}
       .caption {font-size : small; font-weight: bolder;}
       #itemsGoHere {text-align: center;}
       hr {color: #0073AE; background-color: #0073AE; height : 2px; border: 0;}
       a {color: #0073AE;}
-      h1 {color: #fff; background-color: #0073AE; border-radius: 4px; text-align:center}
+      h1 {color: #fff; background-color: #0073AE; border-radius: 1vw;
+            padding: 1vw; text-align:center}
     </style>
   </head>
   <body>
@@ -22,74 +25,74 @@
     <p>Under Australian electoral law, <a href="https://pirateparty.org.au/wiki/Authorisation_processes#Printed_materials.2C_videos_and_paid_Internet_advertisements">almost all printed political material</a> must identify the printer, as well as identifiying the authorising person. This page serves as a mechanism to keep authorisation tags current, and to easily insert printing tags.</p>
     <p>To download a PDF with the printing tag, simply click on an image and insert the name and full address of the printer when prompted.</p>
     <p>Example: <em>P. Sherman Printing, 42 Wallaby Way, Sydney NSW 2003</em></p>
-    <p>If you want image to share online, just click the caption to save it as a PNG from this page - the correct authorisation tag is already in place!</p>
+    <p>If you want an image to share online, just click the caption to save it as a PNG from this page &mdash; the correct authorisation tag is already in place!</p>
 
 
     <div id="itemsGoHere" onclick="clickHandler(event)">
             <hr>
       <div>
-        <img src="Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg-auth_preview.jpg" alt="Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg">
-        <p class="caption"><a href="Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg-auth.png">Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg</a></p>
+        <img src=".//Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg-auth_preview.jpg" alt="Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg">
+        <p class="caption"><a href=".//Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg-auth.png">Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg</a></p>
       </div>
       <hr>
       <div>
-        <img src="Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg-auth_preview.jpg" alt="Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg">
-        <p class="caption"><a href="Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg-auth.png">Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg</a></p>
+        <img src=".//Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg-auth_preview.jpg" alt="Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg">
+        <p class="caption"><a href=".//Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg-auth.png">Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg</a></p>
       </div>
       <hr>
       <div>
-        <img src="Renders/cant-download-planet/can't-download-planet-auth_preview.jpg" alt="cant-download-planet/can't-download-planet">
-        <p class="caption"><a href="Renders/cant-download-planet/can't-download-planet-auth.png">cant-download-planet/can't-download-planet</a></p>
+        <img src=".//Renders/cant-download-planet/can't-download-planet-auth_preview.jpg" alt="cant-download-planet/can't-download-planet">
+        <p class="caption"><a href=".//Renders/cant-download-planet/can't-download-planet-auth.png">cant-download-planet/can't-download-planet</a></p>
       </div>
       <hr>
       <div>
-        <img src="Renders/copyright-reform-timeline/copyright-timeline-auth_preview.jpg" alt="copyright-reform-timeline/copyright-timeline">
-        <p class="caption"><a href="Renders/copyright-reform-timeline/copyright-timeline-auth.png">copyright-reform-timeline/copyright-timeline</a></p>
+        <img src=".//Renders/copyright-reform-timeline/copyright-timeline-auth_preview.jpg" alt="copyright-reform-timeline/copyright-timeline">
+        <p class="caption"><a href=".//Renders/copyright-reform-timeline/copyright-timeline-auth.png">copyright-reform-timeline/copyright-timeline</a></p>
       </div>
       <hr>
       <div>
-        <img src="Renders/crypto-backdoor/crypto-backdoor-auth_preview.jpg" alt="crypto-backdoor/crypto-backdoor">
-        <p class="caption"><a href="Renders/crypto-backdoor/crypto-backdoor-auth.png">crypto-backdoor/crypto-backdoor</a></p>
+        <img src=".//Renders/crypto-backdoor/crypto-backdoor-auth_preview.jpg" alt="crypto-backdoor/crypto-backdoor">
+        <p class="caption"><a href=".//Renders/crypto-backdoor/crypto-backdoor-auth.png">crypto-backdoor/crypto-backdoor</a></p>
       </div>
       <hr>
       <div>
-        <img src="Renders/download-a-car/download-a-car-auth_preview.jpg" alt="download-a-car/download-a-car">
-        <p class="caption"><a href="Renders/download-a-car/download-a-car-auth.png">download-a-car/download-a-car</a></p>
+        <img src=".//Renders/download-a-car/download-a-car-auth_preview.jpg" alt="download-a-car/download-a-car">
+        <p class="caption"><a href=".//Renders/download-a-car/download-a-car-auth.png">download-a-car/download-a-car</a></p>
       </div>
       <hr>
       <div>
-        <img src="Renders/good-ideas/good-ideas-auth_preview.jpg" alt="good-ideas/good-ideas">
-        <p class="caption"><a href="Renders/good-ideas/good-ideas-auth.png">good-ideas/good-ideas</a></p>
+        <img src=".//Renders/good-ideas/good-ideas-auth_preview.jpg" alt="good-ideas/good-ideas">
+        <p class="caption"><a href=".//Renders/good-ideas/good-ideas-auth.png">good-ideas/good-ideas</a></p>
       </div>
       <hr>
       <div>
-        <img src="Renders/love-your-govt/love-your-govt-auth_preview.jpg" alt="love-your-govt/love-your-govt">
-        <p class="caption"><a href="Renders/love-your-govt/love-your-govt-auth.png">love-your-govt/love-your-govt</a></p>
+        <img src=".//Renders/love-your-govt/love-your-govt-auth_preview.jpg" alt="love-your-govt/love-your-govt">
+        <p class="caption"><a href=".//Renders/love-your-govt/love-your-govt-auth.png">love-your-govt/love-your-govt</a></p>
       </div>
       <hr>
       <div>
-        <img src="Renders/marriage/cmon-aussie-auth_preview.jpg" alt="marriage/cmon-aussie">
-        <p class="caption"><a href="Renders/marriage/cmon-aussie-auth.png">marriage/cmon-aussie</a></p>
+        <img src=".//Renders/marriage/cmon-aussie-auth_preview.jpg" alt="marriage/cmon-aussie">
+        <p class="caption"><a href=".//Renders/marriage/cmon-aussie-auth.png">marriage/cmon-aussie</a></p>
       </div>
       <hr>
       <div>
-        <img src="Renders/nothing-to-hide/nothing-to-hide-auth_preview.jpg" alt="nothing-to-hide/nothing-to-hide">
-        <p class="caption"><a href="Renders/nothing-to-hide/nothing-to-hide-auth.png">nothing-to-hide/nothing-to-hide</a></p>
+        <img src=".//Renders/nothing-to-hide/nothing-to-hide-auth_preview.jpg" alt="nothing-to-hide/nothing-to-hide">
+        <p class="caption"><a href=".//Renders/nothing-to-hide/nothing-to-hide-auth.png">nothing-to-hide/nothing-to-hide</a></p>
       </div>
       <hr>
       <div>
-        <img src="Renders/pirate-poster/Pirate Poster-auth_preview.jpg" alt="pirate-poster/Pirate Poster">
-        <p class="caption"><a href="Renders/pirate-poster/Pirate Poster-auth.png">pirate-poster/Pirate Poster</a></p>
+        <img src=".//Renders/pirate-poster/Pirate Poster-auth_preview.jpg" alt="pirate-poster/Pirate Poster">
+        <p class="caption"><a href=".//Renders/pirate-poster/Pirate Poster-auth.png">pirate-poster/Pirate Poster</a></p>
       </div>
       <hr>
       <div>
-        <img src="Renders/space-agency/national-space-agency-auth_preview.jpg" alt="space-agency/national-space-agency">
-        <p class="caption"><a href="Renders/space-agency/national-space-agency-auth.png">space-agency/national-space-agency</a></p>
+        <img src=".//Renders/space-agency/national-space-agency-auth_preview.jpg" alt="space-agency/national-space-agency">
+        <p class="caption"><a href=".//Renders/space-agency/national-space-agency-auth.png">space-agency/national-space-agency</a></p>
       </div>
       <hr>
       <div>
-        <img src="Renders/youtube/youtube-auth_preview.jpg" alt="youtube/youtube">
-        <p class="caption"><a href="Renders/youtube/youtube-auth.png">youtube/youtube</a></p>
+        <img src=".//Renders/youtube/youtube-auth_preview.jpg" alt="youtube/youtube">
+        <p class="caption"><a href=".//Renders/youtube/youtube-auth.png">youtube/youtube</a></p>
       </div>
 
     </div>
