Make the text selection colour be PPAU Blue. What indulgent vanity!

--- a/page_src.html
+++ b/page_src.html
@@ -18,6 +18,7 @@
       a {color: #0073AE;}
       h1 {color: #fff; background-color: #0073AE; border-radius: 1vw;
             padding: 1vw; text-align:center}
+      ::selection {color: #fff; background-color: #0073AE;}
     </style>
   </head>
   <body>
