Now with flexbox for convenient multiple-items-per-line display!

--- a/page_src.html
+++ b/page_src.html
@@ -13,7 +13,8 @@
               width: 90vw; /*min-width: 600px;*/ margin:auto;}
       img {height : 400px; border: 1px solid #eee; border-radius: 1vw}
       .caption {font-size : small; font-weight: bolder;}
-      #itemsGoHere {text-align: center;}
+      #itemsGoHere {text-align: center;flex-wrap: wrap;display: flex;}
+      #itemsGoHere > div {margin-bottom: 5vw; margin-right: 2vw}
       hr {color: #0073AE; background-color: #0073AE; height : 2px; border: 0;}
       a {color: #0073AE;}
       h1 {color: #fff; background-color: #0073AE; border-radius: 1vw;
