--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
       </div>
       <hr>
       <div>
+        <img src="./Renders/thats-transparency/thats-transparency-auth_preview.jpg" alt="thats-transparency/thats-transparency">
+        <p class="caption"><a href="./Renders/thats-transparency/thats-transparency-auth.png">thats-transparency/thats-transparency</a></p>
+      </div>
+      <hr>
+      <div>
         <img src="./Renders/youtube/youtube-auth_preview.jpg" alt="youtube/youtube">
         <p class="caption"><a href="./Renders/youtube/youtube-auth.png">youtube/youtube</a></p>
       </div>
