Fixed up the `download` attribute.

--- a/index.html
+++ b/index.html
@@ -36,97 +36,97 @@
             <hr>
       <div>
         <img src="./Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg-auth_preview.jpg" alt="Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg">
-        <p class="caption"><a href="./Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg-auth.png" download="Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg-auth.png">Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg</a></p>
+        <p class="caption"><a href="./Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg-auth.png" download="give-centrelink-the-boot-A4-bluebg">Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-bluebg</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg-auth_preview.jpg" alt="Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg">
-        <p class="caption"><a href="./Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg-auth.png" download="Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg-auth.png">Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg</a></p>
+        <p class="caption"><a href="./Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg-auth.png" download="give-centrelink-the-boot-A4-whitebg">Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-A4-whitebg</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/cant-download-planet/can't-download-planet-auth_preview.jpg" alt="cant-download-planet/can't-download-planet">
-        <p class="caption"><a href="./Renders/cant-download-planet/can't-download-planet-auth.png" download="cant-download-planet/can't-download-planet-auth.png">cant-download-planet/can't-download-planet</a></p>
+        <p class="caption"><a href="./Renders/cant-download-planet/can't-download-planet-auth.png" download="can't-download-planet">cant-download-planet/can't-download-planet</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/copyright-reform-timeline/copyright-timeline-auth_preview.jpg" alt="copyright-reform-timeline/copyright-timeline">
-        <p class="caption"><a href="./Renders/copyright-reform-timeline/copyright-timeline-auth.png" download="copyright-reform-timeline/copyright-timeline-auth.png">copyright-reform-timeline/copyright-timeline</a></p>
+        <p class="caption"><a href="./Renders/copyright-reform-timeline/copyright-timeline-auth.png" download="copyright-timeline">copyright-reform-timeline/copyright-timeline</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/corflute-covers/Freedom-Democracy-Science-auth_preview.jpg" alt="corflute-covers/Freedom-Democracy-Science">
-        <p class="caption"><a href="./Renders/corflute-covers/Freedom-Democracy-Science-auth.png" download="corflute-covers/Freedom-Democracy-Science-auth.png">corflute-covers/Freedom-Democracy-Science</a></p>
+        <p class="caption"><a href="./Renders/corflute-covers/Freedom-Democracy-Science-auth.png" download="Freedom-Democracy-Science">corflute-covers/Freedom-Democracy-Science</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/corflute-covers/Fun-Name-Fantastic-Policies-auth_preview.jpg" alt="corflute-covers/Fun-Name-Fantastic-Policies">
-        <p class="caption"><a href="./Renders/corflute-covers/Fun-Name-Fantastic-Policies-auth.png" download="corflute-covers/Fun-Name-Fantastic-Policies-auth.png">corflute-covers/Fun-Name-Fantastic-Policies</a></p>
+        <p class="caption"><a href="./Renders/corflute-covers/Fun-Name-Fantastic-Policies-auth.png" download="Fun-Name-Fantastic-Policies">corflute-covers/Fun-Name-Fantastic-Policies</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/corflute-covers/TLDR-auth_preview.jpg" alt="corflute-covers/TLDR">
-        <p class="caption"><a href="./Renders/corflute-covers/TLDR-auth.png" download="corflute-covers/TLDR-auth.png">corflute-covers/TLDR</a></p>
+        <p class="caption"><a href="./Renders/corflute-covers/TLDR-auth.png" download="TLDR">corflute-covers/TLDR</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/crypto-backdoor/crypto-backdoor-auth_preview.jpg" alt="crypto-backdoor/crypto-backdoor">
-        <p class="caption"><a href="./Renders/crypto-backdoor/crypto-backdoor-auth.png" download="crypto-backdoor/crypto-backdoor-auth.png">crypto-backdoor/crypto-backdoor</a></p>
+        <p class="caption"><a href="./Renders/crypto-backdoor/crypto-backdoor-auth.png" download="crypto-backdoor">crypto-backdoor/crypto-backdoor</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/download-a-car/download-a-car-auth_preview.jpg" alt="download-a-car/download-a-car">
-        <p class="caption"><a href="./Renders/download-a-car/download-a-car-auth.png" download="download-a-car/download-a-car-auth.png">download-a-car/download-a-car</a></p>
+        <p class="caption"><a href="./Renders/download-a-car/download-a-car-auth.png" download="download-a-car">download-a-car/download-a-car</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/good-ideas/good-ideas-auth_preview.jpg" alt="good-ideas/good-ideas">
-        <p class="caption"><a href="./Renders/good-ideas/good-ideas-auth.png" download="good-ideas/good-ideas-auth.png">good-ideas/good-ideas</a></p>
+        <p class="caption"><a href="./Renders/good-ideas/good-ideas-auth.png" download="good-ideas">good-ideas/good-ideas</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/jg-and-ces/trial-jg-bring-back-ces-auth_preview.jpg" alt="jg-and-ces/trial-jg-bring-back-ces">
-        <p class="caption"><a href="./Renders/jg-and-ces/trial-jg-bring-back-ces-auth.png" download="jg-and-ces/trial-jg-bring-back-ces-auth.png">jg-and-ces/trial-jg-bring-back-ces</a></p>
+        <p class="caption"><a href="./Renders/jg-and-ces/trial-jg-bring-back-ces-auth.png" download="trial-jg-bring-back-ces">jg-and-ces/trial-jg-bring-back-ces</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/love-your-govt/love-your-govt-auth_preview.jpg" alt="love-your-govt/love-your-govt">
-        <p class="caption"><a href="./Renders/love-your-govt/love-your-govt-auth.png" download="love-your-govt/love-your-govt-auth.png">love-your-govt/love-your-govt</a></p>
+        <p class="caption"><a href="./Renders/love-your-govt/love-your-govt-auth.png" download="love-your-govt">love-your-govt/love-your-govt</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/marriage/cmon-aussie-auth_preview.jpg" alt="marriage/cmon-aussie">
-        <p class="caption"><a href="./Renders/marriage/cmon-aussie-auth.png" download="marriage/cmon-aussie-auth.png">marriage/cmon-aussie</a></p>
+        <p class="caption"><a href="./Renders/marriage/cmon-aussie-auth.png" download="cmon-aussie">marriage/cmon-aussie</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/metadata/you-are-the-metadata-auth_preview.jpg" alt="metadata/you-are-the-metadata">
-        <p class="caption"><a href="./Renders/metadata/you-are-the-metadata-auth.png" download="metadata/you-are-the-metadata-auth.png">metadata/you-are-the-metadata</a></p>
+        <p class="caption"><a href="./Renders/metadata/you-are-the-metadata-auth.png" download="you-are-the-metadata">metadata/you-are-the-metadata</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/nothing-to-hide/nothing-to-hide-auth_preview.jpg" alt="nothing-to-hide/nothing-to-hide">
-        <p class="caption"><a href="./Renders/nothing-to-hide/nothing-to-hide-auth.png" download="nothing-to-hide/nothing-to-hide-auth.png">nothing-to-hide/nothing-to-hide</a></p>
+        <p class="caption"><a href="./Renders/nothing-to-hide/nothing-to-hide-auth.png" download="nothing-to-hide">nothing-to-hide/nothing-to-hide</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/pirate-poster/Pirate Poster-auth_preview.jpg" alt="pirate-poster/Pirate Poster">
-        <p class="caption"><a href="./Renders/pirate-poster/Pirate Poster-auth.png" download="pirate-poster/Pirate Poster-auth.png">pirate-poster/Pirate Poster</a></p>
+        <p class="caption"><a href="./Renders/pirate-poster/Pirate Poster-auth.png" download="Pirate Poster">pirate-poster/Pirate Poster</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/space-agency/national-space-agency-auth_preview.jpg" alt="space-agency/national-space-agency">
-        <p class="caption"><a href="./Renders/space-agency/national-space-agency-auth.png" download="space-agency/national-space-agency-auth.png">space-agency/national-space-agency</a></p>
+        <p class="caption"><a href="./Renders/space-agency/national-space-agency-auth.png" download="national-space-agency">space-agency/national-space-agency</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/thats-transparency/thats-transparency-auth_preview.jpg" alt="thats-transparency/thats-transparency">
-        <p class="caption"><a href="./Renders/thats-transparency/thats-transparency-auth.png" download="thats-transparency/thats-transparency-auth.png">thats-transparency/thats-transparency</a></p>
+        <p class="caption"><a href="./Renders/thats-transparency/thats-transparency-auth.png" download="thats-transparency">thats-transparency/thats-transparency</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/youtube/youtube-auth_preview.jpg" alt="youtube/youtube">
-        <p class="caption"><a href="./Renders/youtube/youtube-auth.png" download="youtube/youtube-auth.png">youtube/youtube</a></p>
+        <p class="caption"><a href="./Renders/youtube/youtube-auth.png" download="youtube">youtube/youtube</a></p>
       </div>
 
     </div>
@@ -138,57 +138,57 @@
               <hr>
       <div>
         <img src="./Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-auth_preview.jpg" alt="Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot">
-        <p class="caption"><a href="./Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-auth.png" download="Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-auth.png">Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot</a></p>
+        <p class="caption"><a href="./Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-auth.png" download="give-centrelink-the-boot">Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/Pete-the-pirate/sharing-turns-content-into-culture/sharing-turns-content-into-culture-auth_preview.jpg" alt="Pete-the-pirate/sharing-turns-content-into-culture/sharing-turns-content-into-culture">
-        <p class="caption"><a href="./Renders/Pete-the-pirate/sharing-turns-content-into-culture/sharing-turns-content-into-culture-auth.png" download="Pete-the-pirate/sharing-turns-content-into-culture/sharing-turns-content-into-culture-auth.png">Pete-the-pirate/sharing-turns-content-into-culture/sharing-turns-content-into-culture</a></p>
+        <p class="caption"><a href="./Renders/Pete-the-pirate/sharing-turns-content-into-culture/sharing-turns-content-into-culture-auth.png" download="sharing-turns-content-into-culture">Pete-the-pirate/sharing-turns-content-into-culture/sharing-turns-content-into-culture</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/SocMed/2018/talk-like-a-pirate-auth_preview.jpg" alt="SocMed/2018/talk-like-a-pirate">
-        <p class="caption"><a href="./Renders/SocMed/2018/talk-like-a-pirate-auth.png" download="SocMed/2018/talk-like-a-pirate-auth.png">SocMed/2018/talk-like-a-pirate</a></p>
+        <p class="caption"><a href="./Renders/SocMed/2018/talk-like-a-pirate-auth.png" download="talk-like-a-pirate">SocMed/2018/talk-like-a-pirate</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/SocMed/MEq-is-law/MEq-is-law-auth_preview.jpg" alt="SocMed/MEq-is-law/MEq-is-law">
-        <p class="caption"><a href="./Renders/SocMed/MEq-is-law/MEq-is-law-auth.png" download="SocMed/MEq-is-law/MEq-is-law-auth.png">SocMed/MEq-is-law/MEq-is-law</a></p>
+        <p class="caption"><a href="./Renders/SocMed/MEq-is-law/MEq-is-law-auth.png" download="MEq-is-law">SocMed/MEq-is-law/MEq-is-law</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/cant-download-planet/cant-download-planet-fb-auth_preview.jpg" alt="cant-download-planet/cant-download-planet-fb">
-        <p class="caption"><a href="./Renders/cant-download-planet/cant-download-planet-fb-auth.png" download="cant-download-planet/cant-download-planet-fb-auth.png">cant-download-planet/cant-download-planet-fb</a></p>
+        <p class="caption"><a href="./Renders/cant-download-planet/cant-download-planet-fb-auth.png" download="cant-download-planet-fb">cant-download-planet/cant-download-planet-fb</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/cant-download-planet/cant-download-planet-twitter-auth_preview.jpg" alt="cant-download-planet/cant-download-planet-twitter">
-        <p class="caption"><a href="./Renders/cant-download-planet/cant-download-planet-twitter-auth.png" download="cant-download-planet/cant-download-planet-twitter-auth.png">cant-download-planet/cant-download-planet-twitter</a></p>
+        <p class="caption"><a href="./Renders/cant-download-planet/cant-download-planet-twitter-auth.png" download="cant-download-planet-twitter">cant-download-planet/cant-download-planet-twitter</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/events/pax/2017/pax-pirata-censorship-gaming-media-society-auth_preview.jpg" alt="events/pax/2017/pax-pirata-censorship-gaming-media-society">
-        <p class="caption"><a href="./Renders/events/pax/2017/pax-pirata-censorship-gaming-media-society-auth.png" download="events/pax/2017/pax-pirata-censorship-gaming-media-society-auth.png">events/pax/2017/pax-pirata-censorship-gaming-media-society</a></p>
+        <p class="caption"><a href="./Renders/events/pax/2017/pax-pirata-censorship-gaming-media-society-auth.png" download="pax-pirata-censorship-gaming-media-society">events/pax/2017/pax-pirata-censorship-gaming-media-society</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/join-the-fight/jtf-basic-income-auth_preview.jpg" alt="join-the-fight/jtf-basic-income">
-        <p class="caption"><a href="./Renders/join-the-fight/jtf-basic-income-auth.png" download="join-the-fight/jtf-basic-income-auth.png">join-the-fight/jtf-basic-income</a></p>
+        <p class="caption"><a href="./Renders/join-the-fight/jtf-basic-income-auth.png" download="jtf-basic-income">join-the-fight/jtf-basic-income</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/join-the-fight/jtf-civil-liberties-auth_preview.jpg" alt="join-the-fight/jtf-civil-liberties">
-        <p class="caption"><a href="./Renders/join-the-fight/jtf-civil-liberties-auth.png" download="join-the-fight/jtf-civil-liberties-auth.png">join-the-fight/jtf-civil-liberties</a></p>
+        <p class="caption"><a href="./Renders/join-the-fight/jtf-civil-liberties-auth.png" download="jtf-civil-liberties">join-the-fight/jtf-civil-liberties</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/join-the-fight/jtf-copyright-reform-auth_preview.jpg" alt="join-the-fight/jtf-copyright-reform">
-        <p class="caption"><a href="./Renders/join-the-fight/jtf-copyright-reform-auth.png" download="join-the-fight/jtf-copyright-reform-auth.png">join-the-fight/jtf-copyright-reform</a></p>
+        <p class="caption"><a href="./Renders/join-the-fight/jtf-copyright-reform-auth.png" download="jtf-copyright-reform">join-the-fight/jtf-copyright-reform</a></p>
       </div>
       <hr>
       <div>
         <img src="./Renders/join-the-fight/jtf-fairer-aus-auth_preview.jpg" alt="join-the-fight/jtf-fairer-aus">
-        <p class="caption"><a href="./Renders/join-the-fight/jtf-fairer-aus-auth.png" download="join-the-fight/jtf-fairer-aus-auth.png">join-the-fight/jtf-fairer-aus</a></p>
+        <p class="caption"><a href="./Renders/join-the-fight/jtf-fairer-aus-auth.png" download="jtf-fairer-aus">join-the-fight/jtf-fairer-aus</a></p>
       </div>
 
     </div>
